deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secure-perimeter
  labels:
    pod-security.kubernetes.io/enforce: restricted
